improvements some issues

--- a/src/app/views/not-found/not-found.component.html
+++ b/src/app/views/not-found/not-found.component.html
@@ -1,1 +1,14 @@
-<p>not-found works!</p>
+<div
+class="d-flex flex-row justify-content-center containerNotFound"
+>
+<div class="d-flex flex-column align-items-center">
+  <div class="text-secondary mb-3">
+    <i-bs name="emoji-frown" width="75" height="75"> </i-bs>
+  </div>
+  <div>
+    <p class="text-secondary">
+      <strong> 404 Not found route </strong> The specified route does not exist 
+    </p>
+  </div>
+</div>
+</div>
