--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -42,7 +42,7 @@
         </div>
         <div class="d-flex flex-column containerDataPokemon">
           <div class="containerNamePokemon">
-            <span>{{ pokemon.name | capitalize }}</span>
+            <span (click)="openModal(true)">{{ pokemon.name | capitalize }}</span>
           </div>
           <div class="containerTypePokemon d-flex flex-row">
             <div class="d-flex flex-row">
