Matching of damage relations properties, calculation to find the winner, improvement of the battle start interface.

--- a/src/app/components/card/card.component.sass
+++ b/src/app/components/card/card.component.sass
@@ -16,7 +16,7 @@
 .dark
     background-color: getMapColor(--dark)
 .fairy
-    background-color: getMapColor(--fair)
+    background-color: getMapColor(--fairy)
 .flying
     background-color: getMapColor(--flying)
 .ground
