--- a/src/app/views/pokemon-list/pokemon-list.component.sass
+++ b/src/app/views/pokemon-list/pokemon-list.component.sass
@@ -21,6 +21,8 @@
     .progresHealth
         background: #60ff60
         text-align: center
+    .table-results
+        background: $white-color
     .loser
         transform: rotate(180deg)
     .text_loser, .text_winner
